[package]
name = "anshou"
version = "0.1.0"
authors = ["mikong <michaelgalero@gmail.com>"]
description = "A text-based UI (TUI) application for generating passwords."
license = "MIT"
publish = false

[dependencies]
termion = "1.5.1"
regex = "1.0.4"
publicsuffix = "1.5.1"
url = "1.7.1"
lazy_static = "1.1.0"
sha2 = "0.7.1"
base64 = "0.9.2"
